--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "KEY_VAULT_URL": "https://kv-oai-herademos.vault.azure.net/",
     "gpt3.5": "gpt-3.5-turbo-0125",
-    "gpt4": "gpt-4-0125-preview",
+    "gpt4": "gpt-4-turbo-preview",
     "embedding_model": "hera-text-embedding-ada-002"
 }
